src/test/deca/context/valid/affect-float-int.deca
// Description : 
//	 test affectation float <-- int
// Resultats :
//
// Historique:
//    cree le 08/01/2022
//	 
{
	float f;
	int i;
	f = i;
}
