src/test/deca/context/invalid/affect-int-boolean.deca
// Description : 
//	 test affectation int <-- boolean
// Resultats :
//	 8:5: Non compatible assignment of expression
{
	int i;
	boolean b;
	i = b;
}